1. Add components Description

--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -104,10 +104,10 @@
 
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="169" height="120" src="assets/img/doc/checkbox-list-do.png" alt="">
+      <img src="assets/img/doc/checkbox-list-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="251" height="120" src="assets/img/doc/checkbox-list-dont.png" alt="">
+      <img  src="assets/img/doc/checkbox-list-dont.png" alt="">
     </div>
   </div>
 
