--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -1,4 +1,130 @@
-<html><head></head><body>
-  <h1>Select</h1>
-  <div app-docs-example="select-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title ">
+    Form Control
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Select
+  </div>
+  <div class="doc-desc-1">
+    Select allows users to select from a single-option menu. Select is a form control for selecting a value from a set of options.
+    </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    In simple select, option menus positioned under their emitting elements such that the currently selected menu item appears
+    under of the emitting element. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="select-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Use radio button to:
+    <ul class="doc-list">
+      <li>Scannable: It should be visible at a glance if a selection has been selected, and selected items should be more visually
+        prominent than unselected items.</li>
+      <li>Contextual: Select content should be suited to user needs.</li>
+      <li>Nimble: Selects should be easy to open, close, and interact with.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage &amp; Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Select menu should be short, clear, and fully visible. It shouldn’t be truncated.
+  </div>
+
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/select-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/select-dont.png" alt="">
+    </div>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/select-spec.png" alt="">
+  </div>
+
+
+
+  <div class="doc-divider">
+
+  </div>
+
+
+</body>
+
+</html>
