--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -3,8 +3,127 @@
 <head></head>
 
 <body>
-	<h1>Slider</h1>
-	<div app-docs-example="slider-basic"></div>
+  <div class="doc-category-title ">
+    Form Control
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Slider
+  </div>
+  <div class="doc-desc-1">
+    Sliders allow users to make selections from a range of values. </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+    ends of the bar that reflect a range of values. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="slider-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Use slider to:
+    <ul class="doc-list">
+      <li>Illustrate/communicate a sliding scale of an option.</li>
+      <li>Validate input as soon as the user has finished interacting with a field.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage &amp; Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Do not use sliders for ranges that are too large (1-1000) or too small (1-3) </div>
+
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/slider-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/slider-dont.png" alt="">
+    </div>
+  </div>
+
+
+
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/slider-spec.png" alt="">
+  </div>
+
+
+
+  <div class="doc-divider">
+
+  </div>
+
+
 </body>
 
 </html>
