--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -3,8 +3,135 @@
 <head></head>
 
 <body>
-	<h1>Toolbar</h1>
-	<div app-docs-example="toolbar-basic"></div>
+  <div class="doc-category-title ">
+    Navigation    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Toolbar  </div>
+  <div class="doc-desc-1">
+    Toolbar displays information and actions relating to the current screen.  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    Use in forms to toggle the state of something on or off.  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="toolbar-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Toolbar should:    <ul class="doc-list">
+      <li>Be a container for headers, titles, or actions</li>
+      <li>Be positioned in consistent locations in the interface, including title and actions.</li>
+      <li>Be clearly title to help differentiate the different sections beneath them.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage &amp; Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Don’t wrap text. For maximum legibility, a text label should remain on a single line.
+  </div>
+
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/toolbar-single-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:16px">
+      <img src="assets/img/doc/toolbar-single-dont.png" alt="">
+    </div>
+  </div>
+
+
+  <div class="doc-desc-2">
+    Don’t place imagery in toolbar that makes the toolbar’s text and icons illegible.  </div>
+
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/toolbar-img-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:16px">
+      <img src="assets/img/doc/toolbar-img-dont.png" alt="">
+    </div>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/toolbar-spec.png" alt="">
+  </div>
+
+
+
+  <div class="doc-divider">
+
+  </div>
+
+
 </body>
 
 </html>
