--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -1,4 +1,129 @@
-<html><head></head><body>
-    <h1>List</h1>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title ">
+    Layout
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    List
+  </div>
+  <div class="doc-desc-1">
+    Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which
+    are represented by icons and text. </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    Single-line list items with divider.
+  </div>
+  <div class="doc-example-container">
     <div app-docs-example="list-basic"></div>
-  </body></html>
+  </div>
+  <div class="doc-desc-2">
+    Single-line list items without divider.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="list-basic"></div>
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Lists are a continuous group of text. They are composed of items containing primary and supplemental actions, which are represented
+    by icons and text.
+    <ul class="doc-list">
+      <li>Logical: Lists should be sorted in logical ways that make content easy to scan, such as alphabetical, numerical, chronological,
+        or by user preference.</li>
+      <li>Actionable: Lists present content in a way that makes it easy to identify a specific item in a collection and act on
+        it.
+      </li>
+      <li>Consistent: Lists should present icons, text, and actions in a consistent format.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Usage &amp; Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+
+  <div class="doc-desc-2">
+    All items in a list should be consistent continuously.
+  </div>
+
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:304px">
+      <img src="assets/img/doc/list-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:304px;margin-top:24px">
+      <img src="assets/img/doc/list-dont.png" alt="">
+    </div>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/list-spec.png" alt="">
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+</body>
+
+</html>
