--- a/src/assets/documents/components/headerfooter.html
+++ b/src/assets/documents/components/headerfooter.html
@@ -51,25 +51,25 @@
         <td>title</td>
         <td>Title for the header.</td>
         <td>string</td>
-        <td>''</td>
+        <td></td>
       </tr>
       <tr>
         <td>userName</td>
         <td>UserName for the navbar-right.</td>
         <td>string</td>
-        <td>''</td>
+        <td></td>
       </tr>
       <tr>
         <td>brandLink</td>
         <td>Link for the brand.</td>
         <td>string</td>
-        <td>''</td>
+        <td></td>
       </tr>
       <tr>
         <td>svgIcon</td>
         <td>Url for the svgIcon.</td>
         <td>string</td>
-        <td>''</td>
+        <td></td>
       </tr>
       <tr>
         <td>type</td>
@@ -88,6 +88,18 @@
         <td>List of links on right part of viz-footer.</td>
         <td>array</td>
         <td>[ ]</td>
+      </tr>
+      <tr>
+        <td>rightBtnClick</td>
+        <td>The callback function that is triggered when right button is pressed.</td>
+        <td>function(e)</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>hamburgerClick</td>
+        <td>The callback function that is triggered when hamburger button is pressed.</td>
+        <td>function(e)</td>
+        <td></td>
       </tr>
     </tbody>
   </table>
