--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -29,7 +29,7 @@
   </div>
   <div class="doc-divider">
   </div>
-  <div class="doc-title-2">
+  <!-- <div class="doc-title-2">
     Props
     <span class="docs-markdown-h3" id="props">
       <span header-link="props"></span>Props</span>
@@ -62,7 +62,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="doc-divider"></div>
+  <div class="doc-divider"></div> -->
   <div class="doc-title-2">
     Best Practice
     <span class="docs-markdown-h3" id="best_practices">
