--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -35,7 +35,7 @@
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
+    <span class="doc-desc-2-highlight">bufferValue/color/mode/value/nubmer/progressbarId/</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -48,16 +48,40 @@
     </thead>
     <tbody>
       <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>bufferValue</td>
+        <td>Buffer value of the progress bar. Defaults to zero.</td>
+        <td>number</td>
+        <td>zero</td>
       </tr>
       <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>color</td>
+        <td>Theme color palette for the component.</td>
+        <td>ThemePalette</td>
+        <td>none</td>
+      </tr>
+      <tr>
+        <td>mode</td>
+        <td>Mode of the progress bar.
+
+          Input must be one of these values: determinate, indeterminate, buffer, query, defaults to 'determinate'. Mirrored to mode attribute.</td>
+        <td>string</td>
+        <td>determinate</td>
+      </tr>
+      <tr>
+        <td>value</td>
+        <td>Value of the progress bar. Defaults to zero. Mirrored to aria-valuenow.
+
+        </td>
+        <td>number</td>
+        <td>none</td>
+      </tr>
+      <tr>
+        <td>progressbarId</td>
+        <td>The id of the progress bar.
+
+        </td>
+        <td>string</td>
+        <td>none</td>
       </tr>
     </tbody>
   </table>
@@ -72,7 +96,8 @@
     Linear progress indicators support both determinate and indeterminate operations.
     <ul class="doc-list">
       <li>Determinate operations display the indicator increasing in width from 0 to 100% of the track, in sync with the process’s
-        progress.</li>
+        progress.
+      </li>
       <li>Indeterminate operations display the indicator continually growing and shrinking along the track until the process
         is complete.</li>
 
@@ -104,7 +129,7 @@
   </div>
 
 
-  
+
 
   <div class="doc-divider">
 
