--- a/src/assets/examples/list-basic/list-basic.component.css
+++ b/src/assets/examples/list-basic/list-basic.component.css
@@ -1,20 +1,8 @@
-.inner-content {
+.list-basic-wrap {
   width: 330px;
 }
 
-.chip {
-  color: white;
-  border-radius: 24px;
-  width: 24px;
-  text-align: center;
-  float: right;
-}
-.red {
-  background-color: red;
-}
-.purple {
-  background-color: blueviolet;
-}
-.orange {
-  background-color: orange;
+.list-example{
+  display:flex;
+  justify-content: space-around
 }
