--- a/src/assets/examples/progress-bar-basic/progress-bar-basic.component.html
+++ b/src/assets/examples/progress-bar-basic/progress-bar-basic.component.html
@@ -1,11 +1,2 @@
-<div>
-
-  <mat-progress-bar mode="determinate"
-                    value="40"
-                    color="accent"></mat-progress-bar>
-</div>
-<div>
-  <mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
-
-
-</div>
+<mat-progress-bar mode="determinate" value="40" color="accent"></mat-progress-bar>
+<mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
