--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -1,7 +1,23 @@
 <viz-tree [tree]="tree">
-  <ng-template let-node>
-    <mat-checkbox [checked]="descendantsAllSelected(node)"
-                  [indeterminate]="descendantsPartiallySelected(node)"
-                  (change)="toggle(node)">{{node.name}}</mat-checkbox>
-  </ng-template>
+
+  <!-- <div *VizTreeLeafDef="let node">
+    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
+  </div>
+
+  <div *VizTreeNodeDef="let node">
+    <mat-icon (click)="node.isExpanded = !node.isExpanded">
+      {{node.isExpanded ? 'expand_more' : 'chevron_right'}}
+    </mat-icon>
+    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
+
+  </div> -->
+
+
+  <div *VizTreeLeafDef>
+    awejfawefawje;
+  </div>
+  <div *VizTreeNodeDef>
+    awejfawefawje;
+  </div>
+
 </viz-tree>
