--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -13,11 +13,13 @@
   </div> -->
 
 
-  <div *VizTreeLeafDef>
-    awejfawefawje;
-  </div>
-  <div *VizTreeNodeDef>
-    awejfawefawje;
-  </div>
-
+  <ng-template #nodeDef let-node>
+    <mat-icon (click)="node.isExpanded = !node.isExpanded">
+      {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}
+    </mat-icon>
+    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
+  </ng-template>
+  <ng-template #leafDef let-node>
+    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
+  </ng-template>
 </viz-tree>
