update Tree css style

--- a/libs/components/tree/viz-tree.component.scss
+++ b/libs/components/tree/viz-tree.component.scss
@@ -3,9 +3,11 @@
 }
 .viz-tree-cell-node {
   display: flex;
+  margin-bottom: 16px;
 }
 .viz-tree-cell-child {
   margin-left: 24px;
+  margin-bottom: 16px;
 }
 .viz-tree-cell-node-content{
     margin-left: 24px;
