Add example code generator

--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -12,6 +12,10 @@
 
   </div> -->
 
+  <ng-container *VizTreeNodeDef="let node;">
+
+  </ng-container>
+
 
   <ng-template #nodeDef let-node>
     <mat-icon (click)="node.isExpanded = !node.isExpanded">
