Add new example chip-primary, list-nodivider, menu nested

--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -26,6 +26,12 @@
   <div class="doc-example-container">
     <div app-docs-example="chip-basic"></div>
   </div>
+  <div class="doc-desc-2 docs-mt24">
+      Chip displays a list of values as individual, keyboard accessible
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="chip-primary"></div>
+    </div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
