--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -31,7 +31,7 @@
     Single-line list items without divider.
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="list-basic"></div>
+    <div app-docs-example="list-nodivider"></div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -54,14 +54,8 @@
     </thead>
     <tbody>
       <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
+        <td>disableRipple</td>
+        <td>Whether ripples are disabled.</td>
         <td>boolean</td>
         <td>false</td>
       </tr>
