--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -47,17 +47,12 @@
     </thead>
     <tbody>
       <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>tree</td>
+        <td>nested data json</td>
+        <td>Object</td>
+        <td></td>
       </tr>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
+      
     </tbody>
   </table>
   <div class="doc-divider"></div>
