--- a/libs/style.scss
+++ b/libs/style.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import '../node_modules/@angular/material/theming';
 @include mat-core();
 $small-breakpoint-width: 720px;
 
