--- a/src/document.scss
+++ b/src/document.scss
@@ -1,3 +1,6 @@
+a {
+  text-decoration: none;
+}
 .doc-category-title {
   /* Form Controls: */
   font-family: SoletoTrial-Regular;
@@ -231,4 +234,21 @@
 }
 .docs-mt16 {
   margin-top: 16px;
+}
+.doc-bold-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.doc-code-sec {
+  margin: 0 0 30px 0;
+  background-color: #F8F8F8;
+  border: 1px solid #EFEFEF;
+  padding: 16px 20px;
+  min-height: 64px;
+  line-height: 30px;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: Soleto;
 }
