--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -25,7 +25,7 @@
     In simple select, option menus positioned under their emitting elements such that the currently selected menu item appears
     under of the emitting element. </div>
   <div class="doc-example-container">
-    <div app-docs-example="select-basic"></div>
+    <div app-docs-example="tabs"></div>
   </div>
   <div class="doc-divider">
   </div>
