--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -1,29 +1,19 @@
 <viz-tree [tree]="tree">
 
-  <!-- <div *VizTreeLeafDef="let node">
+  <ng-container *VizTreeLeafDef="let node">
     <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
-  </div>
-
-  <div *VizTreeNodeDef="let node">
-    <mat-icon (click)="node.isExpanded = !node.isExpanded">
-      {{node.isExpanded ? 'expand_more' : 'chevron_right'}}
-    </mat-icon>
-    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
-
-  </div> -->
-
-  <ng-container *VizTreeNodeDef="let node;">
-
   </ng-container>
 
-
-  <ng-template #nodeDef let-node>
-    <mat-icon (click)="node.isExpanded = !node.isExpanded">
+  <ng-container *VizTreeNodeDef="let node">
+    <!-- <mat-icon (click)="node.isExpanded = !node.isExpanded">
       {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}
-    </mat-icon>
+    </mat-icon> -->
+    <button mat-icon-button (click)="node.isExpanded = !node.isExpanded" [attr.aria-label]="'toggle ' + node.name" matTreeNodeToggle>
+      <mat-icon class="mat-icon-rtl-mirror">
+        {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}
+      </mat-icon>
+    </button>
     <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
-  </ng-template>
-  <ng-template #leafDef let-node>
-    <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
-  </ng-template>
+  </ng-container>
+
 </viz-tree>
