--- a/libs/components/select/viz-select.component.scss
+++ b/libs/components/select/viz-select.component.scss
@@ -47,7 +47,71 @@
     }
   }
   
-  .vizient-input {
+  // .vizient-input {
+  //   .mat-input-element {
+  //     height: 24px;
+  //     // padding: 5px 0px;
+  //     line-height: 24px;
+  //     vertical-align: middle;
+  //   }
+  //   ::ng-deep {
+  //     .mat-form-field-label {
+  //       height: 21.333px;
+  //       line-height: 21.333px;
+  //       font-size: 16px;
+  //       margin-bottom: 1px;
+  //     }
+  //     .mat-form-field-flex {
+  //       align-items: stretch;
+  //     }
+  //     .mat-form-field-appearance-legacy .mat-form-field-infix {
+  //       margin-bottom: 5px;
+  //       padding-bottom: 0px;
+  //     }
+  //     .mat-form-field-appearance-legacy .mat-form-field-wrapper {
+  //       padding-bottom: 0px;
+  //     }
+  //     .mat-form-field-appearance-legacy .mat-form-field-underline {
+  //       bottom: 0px;
+  //     }
+  //     .mat-icon {
+  //       margin-top: 17px;
+  //     }
+  //     .mat-datepicker-toggle {
+  //       margin-top: 17px;
+  //       display: block;
+  //       color: #9f9f9f;
+  //     }
+  
+  //     .mat-form-field-appearance-legacy .mat-form-field-label {
+  //       color: #9f9f9f;
+  //     }
+  
+  //     .mat-form-field.mat-focused .mat-form-field-label{
+  //       color: #7f5eba;
+  //     }
+  
+  
+  //     .mat-form-field-appearance-legacy .mat-form-field-underline {
+  //       background-color: #c3c3c3;
+  //     }
+  
+  //     &:hover {
+  //       .mat-form-field-appearance-legacy .mat-form-field-underline {
+  //         background-color: #000000;
+  //       }
+  //     }
+  //   }
+  // }
+  
+  ::ng-deep{
+    .mat-menu-panel.select-dropdown_menu{
+      margin-top:1px;
+      width: 280px;
+      .mat-menu-content{
+        padding: 0px;
+      }
+    }
     .mat-input-element {
       height: 24px;
       // padding: 5px 0px;
@@ -100,16 +164,6 @@
         .mat-form-field-appearance-legacy .mat-form-field-underline {
           background-color: #000000;
         }
-      }
-    }
-  }
-  
-  ::ng-deep{
-    .mat-menu-panel.select-dropdown_menu{
-      margin-top:1px;
-      width: 280px;
-      .mat-menu-content{
-        padding: 0px;
       }
     }
   }
