--- a/libs/components/tree/viz-tree.component.html
+++ b/libs/components/tree/viz-tree.component.html
@@ -24,7 +24,7 @@
           <ng-container *ngTemplateOutlet="vizTreeNodeTemplate; context: { $implicit: node }"></ng-container>
         </ng-container>
         <ng-container *ngIf="node.children.length==0">
-          <div [class.viz-tree-cell-node-content]="!node.children.length>0">
+          <div [class.viz-tree-cell-node-content]="!(node.children.length>0)">
             <ng-container *ngTemplateOutlet="vizTreeLeafTemplate; context: { $implicit: node }"></ng-container>
           </div>
         </ng-container>
