--- a/src/assets/examples/toolbar-basic/toolbar-basic.component.html
+++ b/src/assets/examples/toolbar-basic/toolbar-basic.component.html
@@ -1,4 +1,4 @@
 <div class="toolbarWrapper">
-  <viz-toolbar title="Title" (searchBtnClick)="seachOnClick()">
+  <viz-toolbar placeholderText="Title" (searchBtnClick)="seachOnClick($event)">
   </viz-toolbar>
 </div>
