--- a/src/assets/examples/toolbar-basic/toolbar-basic.component.scss
+++ b/src/assets/examples/toolbar-basic/toolbar-basic.component.scss
@@ -1,7 +1,6 @@
 :host {
   .toolbarWrapper {
-    display: block;
+    display: inline-block;
     width: 710px;
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.1);
   }
 }
